force-app/main/default/objects/Apttus_Config2__OrderLineItem__c/Apttus_Config2__OrderLineItem__c.object-meta.xml
<CustomObject>
    <description>Represents a product or service line item associated with an order</description>
    <label>Order Line Item</label>
    <nameField>
        <displayFormat>OI-{0000000000}</displayFormat>
        <label>Line Item Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>