force-app/main/default/objects/Apttus_Config2__OrderLineItem__c/fields/Actual_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Ship_Date__c</fullName>
    <description>Field to store actual ship date</description>
    <label>Actual Ship Date</label>
    <type>Date</type>
</CustomField>