force-app/main/default/objects/Apttus_Config2__OrderLineItem__c/fields/Apttus_Config2__ActivatedDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ActivatedDate__c</fullName>
    <description>The date the order item is ready for activation. The order item is activated on this date.</description>
    <inlineHelpText>The date the order item is ready for activation. The order item is activated on this date.</inlineHelpText>
    <label>Ready for Activation Date</label>
    <type>DateTime</type>
</CustomField>