force-app/main/default/objects/Apttus_Config2__OrderLineItem__c/fields/Case_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Id__c</fullName>
    <description>Field to store case id</description>
    <label>Case Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>