force-app/main/default/objects/Apttus_Config2__OrderLineItem__c/fields/Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Contract_Number__c</fullName>
    <description>Added for Dcp 11240</description>
    <formula>Apttus_Config2__OrderId__r.Apttus_Config2__OrderReferenceNumber__c</formula>
    <label>Contract Number</label>
    <type>Text</type>
</CustomField>