force-app/main/default/objects/Apttus_Config2__OrderLineItem__c/fields/Custom_License_Flag__c.field-meta.xml
<CustomField>
    <fullName>Custom_License_Flag__c</fullName>
    <description>Field to store custom license flag</description>
    <defaultValue>false</defaultValue>
    <label>Custom License Flag</label>
    <type>Checkbox</type>
</CustomField>