force-app/main/default/objects/Apttus_Config2__OrderLineItem__c/fields/Domain_ID__c.field-meta.xml
<CustomField>
    <fullName>Domain_ID__c</fullName>
    <description>Field to store domain id</description>
    <externalId>true</externalId>
    <label>Domain ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>