force-app/main/default/objects/Apttus_Config2__OrderLineItem__c/fields/Domain_URL__c.field-meta.xml
<CustomField>
    <fullName>Domain_URL__c</fullName>
    <description>Field to store domain url</description>
    <label>Domain URL</label>
    <type>Url</type>
</CustomField>