force-app/main/default/objects/Apttus_Config2__OrderLineItem__c/fields/Dragen_Connectivity__c.field-meta.xml
<CustomField>
    <fullName>Dragen_Connectivity__c</fullName>
    <description>Field to store dragen connectivity</description>
    <label>Dragen Connectivity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Offline</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>