force-app/main/default/objects/Apttus_Config2__OrderLineItem__c/fields/Equipment_Id__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Id__c</fullName>
    <description>Field to store equipment id</description>
    <label>Equipment Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>