force-app/main/default/objects/Apttus_Config2__OrderLineItem__c/fields/ERP_Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>ERP_Contract_Type__c</fullName>
    <description>Field to store erp contract type</description>
    <label>ERP Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Base Warranty (ZWB)</fullName>
            </value>
            <value>
                <fullName>Extended Warranty (ZWE)</fullName>
            </value>
            <value>
                <fullName>Professional Services (ZWP)</fullName>
            </value>
            <value>
                <fullName>Rental (ZWR)</fullName>
            </value>
            <value>
                <fullName>Software (ZWS)</fullName>
            </value>
            <value>
                <fullName>Service Contract (ZWV)</fullName>
            </value>
            <value>
                <fullName>BaseSpace Value Contract (ZVB)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>