force-app/main/default/objects/Apttus_Config2__OrderLineItem__c/fields/ERP_Line_Number_Id__c.field-meta.xml
<CustomField>
    <fullName>ERP_Line_Number_Id__c</fullName>
    <description>Field to store erp line number id</description>
    <externalId>true</externalId>
    <label>ERP Line Number Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>