force-app/main/default/objects/Apttus_Config2__OrderLineItem__c/fields/Instance_Region__c.field-meta.xml
<CustomField>
    <fullName>Instance_Region__c</fullName>
    <description>Field to store instance region</description>
    <label>Instance Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>