force-app/main/default/objects/Apttus_Config2__OrderLineItem__c/fields/Max_Samples_Allowed_Per_kit__c.field-meta.xml
<CustomField>
    <fullName>Max_Samples_Allowed_Per_kit__c</fullName>
    <description>Roll up to store Max smaples allowed per kit</description>
    <label>Max Samples Allowed (Per kit)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>