force-app/main/default/objects/Apttus_Config2__OrderLineItem__c/fields/Number_Of_Samples__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Samples__c</fullName>
    <description>Field to store number of samples</description>
    <label>Number Of Samples</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>