force-app/main/default/objects/Apttus_Config2__OrderLineItem__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>Field to store order</description>
    <formula>Apttus_QPConfig__ProposalLineItemId__r.Previous_ERP_Contract_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Number</label>
    <type>Text</type>
</CustomField>