force-app/main/default/objects/Apttus_Config2__OrderLineItem__c/fields/Order_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Line_Number__c</fullName>
    <description>Field to store order line number</description>
    <formula>Apttus_QPConfig__ProposalLineItemId__r.Previous_ERP_Contract_Line_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Line Number</label>
    <type>Text</type>
</CustomField>