force-app/main/default/objects/Apttus_Config2__OrderLineItem__c/fields/Price_per_sample__c.field-meta.xml
<CustomField>
    <fullName>Price_per_sample__c</fullName>
    <description>Field to store price per sample</description>
    <label>Price per sample</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>