force-app/main/default/objects/Apttus_Config2__OrderLineItem__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <description>Field to store primary contact</description>
    <formula>Apttus_Config2__OrderId__r.Apttus_Config2__PrimaryContactId__c</formula>
    <label>Primary Contact</label>
    <type>Text</type>
</CustomField>