force-app/main/default/objects/Apttus_Config2__OrderLineItem__c/fields/Registrant_Contact__c.field-meta.xml
<CustomField>
    <fullName>Registrant_Contact__c</fullName>
    <description>Field to store registrant contact</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registrant Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Order Line Items (Registrant Contact)</relationshipLabel>
    <relationshipName>Order_Line_Items_Registrant</relationshipName>
    <type>Lookup</type>
</CustomField>