force-app/main/default/objects/Apttus_Config2__OrderLineItem__c/fields/Registrant_Lead__c.field-meta.xml
<CustomField>
    <fullName>Registrant_Lead__c</fullName>
    <description>Field to store registrant lead</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registrant Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Order Line Items</relationshipLabel>
    <relationshipName>Order_Line_Items_Registrants</relationshipName>
    <type>Lookup</type>
</CustomField>