force-app/main/default/objects/Apttus_Config2__OrderLineItem__c/fields/Renewal_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Subscription__c</fullName>
    <description>Field to store renewal subscription</description>
    <formula>Apttus_QPConfig__ProposalLineItemId__r.Renewal_Subscription__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal Subscription</label>
    <type>Checkbox</type>
</CustomField>