force-app/main/default/objects/Apttus_Config2__OrderLineItem__c/fields/Total_Item_Freight__c.field-meta.xml
<CustomField>
    <fullName>Total_Item_Freight__c</fullName>
    <description>Field to store total item freight</description>
    <label>Total Item Freight</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>