force-app/main/default/objects/Apttus_Config2__OrderLineItem__c/fields/Ultimate_Consignee__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Consignee__c</fullName>
    <description>Created as a part of 14101</description>
    <formula>Apttus_Config2__OrderId__r.Ultimate_Consignee__c</formula>
    <label>Ultimate Consignee</label>
    <type>Text</type>
</CustomField>