force-app/main/default/objects/Apttus_Config2__OrderLineItem__c/fields/Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price__c</fullName>
    <description>Field to store unit price</description>
    <label>Unit Price</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>