force-app/main/default/objects/Apttus_Config2__OrderLineItem__c/fields/Workgroup_ID__c.field-meta.xml
<CustomField>
    <fullName>Workgroup_ID__c</fullName>
    <description>Field to store workgroup id</description>
    <externalId>true</externalId>
    <label>Workgroup ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>