force-app/main/default/objects/Apttus_Config2__OrderLineItem__c/fields/Zuora_Subscription_ID__c.field-meta.xml
<CustomField>
    <fullName>Zuora_Subscription_ID__c</fullName>
    <description>Field to store zuora subscription id</description>
    <externalId>true</externalId>
    <label>Zuora Subscription ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>